@@ -53,6 +53,13 @@ compress    = yes
 # which databases to backup. should either be the word 'all' or a 
 # space separated list of database names.
 #
+# nodata = < table1 table2 table3 > (no default)
+# only dump the structure for the database tables listed here, this means
+# no data contained in these tables will be dumped. This is very useful
+# to backup databases that have tables with cache stored in tables that
+# isn't necessary to backup, but you still need the structure to exist
+# on a restore
+#
 # backupdir = < path/to/destination > (default = /var/backups/mysql)
 # where to dump the backups. hotcopy backups will be in a subdirectory 
 # 'hotcopy' and sqldump backups will be in a subdirectory 'sqldump'
